Removed unused methods, general refactor
Co-authored-by: Alessandro Isceri <alessandroisceri2002@gmail.com>